--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
   <h1>Welcome to GlowMent!</h1>
-  <h3>We offer natural lop balms for soft ,hydrated lips</h3>
+  <h3>We offer natural lip balms for soft ,hydrated lips</h3>
 </html>
